# seshat

./: .env.example  .gitignore  README.md  ecosystem.config.cjs  package-lock.json  package.json  tsconfig.base.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/02-structured-document-ingestion/: 02-AI-SPEC.md
.planning/phases/03-first-curatorial-surface/: 03-UI-SPEC.md
.planning/todos/pending/: 2026-06-30-localize-web-surface.md
apps/web/: astro.config.mjs  auth.config.ts  package.json
apps/web/public/: manifest.json
apps/web/src/: env.d.ts  middleware.ts
apps/web/test/: attachment-filename.test.ts  bibliographic-year.test.ts  bibliography-paths.test.ts  catalog-filter-theme.test.ts  corpus-graph.test.ts  corpus-search-theme.test.ts  document-structure.test.ts  duplicate-match.test.ts  emergence.test.ts  epub-appearance.test.ts  graph-discovery.test.ts  graph-interaction.test.ts  (+25 more)
apps/worker/: package.json
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING-STARTED.md  HANDOFF.md  README.md  RETRIEVAL.md  TESTING.md
ops/: compose.retrieval.yml
ops/caddy/: seshat.caddy
scripts/: backfill-openalex-graphs.mjs  backfill-retrieval.mjs  backfill-word-counts.mjs  install-djvu-tools.sh  migrate-contributors.mjs  migrate-r2-to-wasabi.mjs  repair-attachment-separators.mjs  zotero-sync-daemon.ts
services/ingest/: README.md  pyproject.toml
services/ingest/seshat_ingest/: __init__.py  cli.py  djvu.py  pipeline.py  webarchive.py
services/ingest/test/: test_pipeline.py
(+125 files in other folders)
